; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_mbsdup.c__mbsdup.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/mbstring/extr_mbsdup.c__mbsdup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_mbsdup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %22

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @_mbslen(i8* %9)
  %11 = add nsw i64 %10, 1
  %12 = call i64 @malloc(i64 %11)
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %8
  store i8* null, i8** %2, align 8
  br label %22

17:                                               ; preds = %8
  %18 = load i8*, i8** %4, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @_mbscpy(i8* %18, i8* %19)
  %21 = load i8*, i8** %4, align 8
  store i8* %21, i8** %2, align 8
  br label %22

22:                                               ; preds = %17, %16, %7
  %23 = load i8*, i8** %2, align 8
  ret i8* %23
}

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @_mbslen(i8*) #1

declare dso_local i32 @_mbscpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
